--- a/app/src/main/res/layout/layout_float.xml
+++ b/app/src/main/res/layout/layout_float.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl_float"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="64dp"
+    android:layout_height="64dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_float"
@@ -12,6 +12,6 @@
         android:layout_centerInParent="true"
         android:src="@mipmap/ic_launcher_round"
         app:civ_border_color="@color/colorAccent"
-        app:civ_border_width="4dp" />
+        app:civ_border_width="8dp" />
 </RelativeLayout>
 
